3822B1PE2/9_gelu_ocl/matynina_aleksandra/log.txt
In file included from /usr/include/CL/cl.h:20,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1PE2/9_gelu_ocl/matynina_aleksandra/gelu_ocl.cpp:2:
/usr/include/CL/cl_version.h:22:104: note: ‘#pragma message: cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)’
   22 | #pragma message("cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)")
      |                                                                                                        ^
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/9_gelu_ocl/matynina_aleksandra/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&, int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/9_gelu_ocl/matynina_aleksandra/gelu_ocl.cpp:56:50: warning: ‘_cl_command_queue* clCreateCommandQueue(cl_context, cl_device_id, cl_command_queue_properties, cl_int*)’ is deprecated [-Wdeprecated-declarations]
   56 |     cl_command_queue queue = clCreateCommandQueue(context, device, 0, &err);
      |                              ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/crazyproger/sandbox/gpu-2025/3822B1PE2/9_gelu_ocl/matynina_aleksandra/gelu_ocl.cpp:2:
/usr/include/CL/cl.h:1906:1: note: declared here
 1906 | clCreateCommandQueue(cl_context                     context,
      | ^~~~~~~~~~~~~~~~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/9_gelu_ocl/matynina_aleksandra/gelu_ocl.cpp:119:62: error: lvalue required as unary ‘&’ operand
  119 |     err |= clSetKernelArg(kernel, 2, sizeof(int), &input.size());
      |                                                    ~~~~~~~~~~^~
